--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
+2006-12-26  Nigel Tao  <nigeltao@gnome.org>  revision 12
+
+	* Can now drag-and-drop workspaces.
+
+
 2006-12-25  Nigel Tao  <nigeltao@gnome.org>  revision 11
 
 	* New -c, -v and -? command line options.
-	  -c or --trigger-on-caps-lock makes the Caps Lock key also switch windows.
+	  -c or --trigger-on-caps-lock makes Caps Lock also switch windows.
 	  -v or --version shows the version number and exits.
 	  -? or --help shows a brief instruction guide.
 
