--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-06  Nigel Tao  <nigeltao@gnome.org>  revision 16
+
+  * Respects #define MAX_REASONABLE_WORKSPACES 36 as per metacity.
+
+
 2007-01-06  Nigel Tao  <nigeltao@gnome.org>  revision 15
 
   * --trigger-on-caps-lock split into --also-trigger... and --only-trigger...
