--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-07  Nigel Tao  <nigeltao@gnome.org>  revision 17
+
+  * Version bump to 0.5.
+
+
 2007-01-06  Nigel Tao  <nigeltao@gnome.org>  revision 16
 
   * Respects #define MAX_REASONABLE_WORKSPACES 36 as per metacity.
