--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-07  Nigel Tao  <nigeltao@gnome.org>  revision 18
+
+  * New add and remove workspace buttons.
+
+
 2007-01-07  Nigel Tao  <nigeltao@gnome.org>  revision 17
 
   * Version bump to 0.5.
