--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-31  Nigel Tao  <nigeltao@gnome.org>  revision 20
+
+  * Added D-Bus service file.
+
+
 2007-01-12  Nigel Tao  <nigeltao@gnome.org>  revision 19
 
   * First draft of a D-Bus interface.
