--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-22  Nigel Tao  <nigeltao@gnome.org>  revision 21
+
+  * Added some test scripts.
+
+
 2007-01-31  Nigel Tao  <nigeltao@gnome.org>  revision 20
 
   * Added D-Bus service file.
