--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-253  Nigel Tao  <nigeltao@gnome.org>  revision 27
+
+  * Some more svn:ignore'd files.
+
+
 2007-06-17  Nigel Tao  <nigeltao@gnome.org>  revision 26
 
   * First cut of window thumbnails (XComposite / XRender bling).
