--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-17  Nigel Tao  <nigeltao@gnome.org>  revision 33
+
+  * More comprehensive fix for crasher with windows belonging to no workspace.
+
+
 2008-03-23  Nigel Tao  <nigeltao@gnome.org>  revision 32
 
   * Fixed build error when xcomposite headers aren't present.
