--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-09  Nigel Tao  <nigeltao@gnome.org>  revision 39
+
+  * Build fix for libgdk 2.22+, such as on Ubuntu Precise.
+    Fixes issue 49. Fixes issue 53.
+
+
 2010-01-31  Nigel Tao  <nigeltao@gnome.org>  revision 38
 
   * Fix typo in autogen.sh. This fixes issue issue 37.
