--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-09  Nguyễn Hà Dương  <cmpitg@gmail.com>  revision 40
+
+  * Disable behaviour with Capslock.
+
+
 2012-09-09  Nigel Tao  <nigeltao@gnome.org>  revision 39
 
   * Build fix for libgdk 2.22+, such as on Ubuntu Precise.
