--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-09  Nguyễn Hà Dương  <cmpitg@gmail.com>  revision 41
+
+  * Shortcut changed to <Super + Tab>
+
+
 2012-09-09  Nguyễn Hà Dương  <cmpitg@gmail.com>  revision 40
 
   * Disable behaviour with Capslock.
